src/components/section-display.less
@section-display-min-height: 36px;
@section-display-editable-padding-top: 40px;
@section-display-action-button-margin: 2px;

.SectionDisplay {
  background-color: @edu-white;
  border: 1px dotted transparent;
  position: relative;
  padding: @edu-content-padding;
  min-height: @section-display-min-height;

  &.is-editable {
    padding: @edu-content-padding;
    padding-top: @section-display-editable-padding-top;
    border-color: @edu-border-color-base;
    min-height: @section-display-min-height + @section-display-editable-padding-top;

    &:hover {
      border: 1px solid @edu-border-color-base;
    }

    &.is-dragged {
      border: 1px solid @edu-border-color-base;
    }

    &.is-other-section-dragged {
      opacity: 0.60;
    }
  }

  &.is-hard-deletable {
    &:hover {
      border: 1px solid @edu-border-color-base;
    }

    &:hover .SectionDisplay-actionButton--hardDelete {
      display: block;
    }

    &:hover .SectionDisplay-sectionInfo--hardDelete {
      display: grid;
    }
  }
}

.SectionDisplay-actions {
  display: flex;
  line-height: 18px; // fixes misaligned button when disabled
  position: absolute;
  top: @section-display-action-button-margin;

  &.SectionDisplay-actions--left {
    left: @section-display-action-button-margin;
  }

  &.SectionDisplay-actions--right {
    right: @section-display-action-button-margin;
  }
}

.SectionDisplay-actionButton {
  margin-left: @section-display-action-button-margin;

  &.SectionDisplay-actionButton--edit,
  &.SectionDisplay-actionButton--preview {
    color: @green-8;
    &:hover, &:active, &:focus {
      color: @green-8;
      border-color: @green-8;
    }
  }

  &.SectionDisplay-actionButton--delete {
    color: @edu-danger-color;
    &:hover, &:active, &:focus {
      color: @edu-danger-color;
      border-color: @edu-danger-color;
    }
  }

  &.SectionDisplay-actionButton--hardDelete {
    display: none;
    color: @edu-danger-color;
    border-color: @edu-danger-color;
  }
}

.SectionDisplay-actionTooltip {
  display: flex;
  flex-direction: column;
}

.SectionDisplay-actionTooltipSubtext {
  margin-top: 5px;
  font-size: 11px;
}

.SectionDisplay-sectionInfo {
  display: grid;
  gap: 5px;
  align-items: center;
  grid-auto-flow: column;
  padding: 0 5px;
  height: @edu-control-height-sm;
  border: 1px solid @edu-border-color-base;
  border-radius: @edu-border-radius-base;
  background-color: @edu-white;

  &.SectionDisplay-sectionInfo--hardDelete {
    display: none;
  }
}

.SectionDisplay-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: @edu-selection-background-color;
  opacity: 70%;

  &.SectionDisplay-overlay--withButtons {
    background-color: transparent;
    opacity: 100%;
  }
}

.SectionDisplay-overlayButton {
  display: block;
  margin: 0 7px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  box-shadow: 0px 0px 8px @grey-7;

  &.SectionDisplay-overlayButton--apply {
    color: @edu-white;
    background-color: @edu-apply-color;
    border: 1px solid darken(@edu-apply-color, 5%);

    &:hover {
      background-color: darken(@edu-apply-color, 15%);
      border: 1px solid darken(@edu-apply-color, 20%);
    }
  }

  &.SectionDisplay-overlayButton--discard {
    color: @edu-white;
    background-color: @edu-discard-color;
    border: 1px solid darken(@edu-discard-color, 5%);

    &:hover {
      background-color: darken(@edu-discard-color, 15%);
      border: 1px solid darken(@edu-discard-color, 20%);
    }
  }
}

.SectionDisplay-overlayButtonIcon {
  display: flex;
  justify-content: center;
  font-size: 140%;
  line-height: 70%;
  text-align: center;
}

.SectionDisplay-overlayButtonText {
  font-size: 80%;
  text-align: center;
}

